- fix some wrong -fx-alignment statements in the css

--- a/phoenicis-javafx/src/main/resources/org/phoenicis/javafx/themes/default/main.less
+++ b/phoenicis-javafx/src/main/resources/org/phoenicis/javafx/themes/default/main.less
@@ -584,19 +584,19 @@
 
 /*************** repository type selection *************/
 #repositoryTypeSelection {
-  -fx-alignment: center left;
+  -fx-alignment: center-left;
   -fx-spacing: 1em;
 }
 
 /***************** add local repository ****************/
 #addLocalRepository {
-  -fx-alignment: center left;
+  -fx-alignment: center-left;
   -fx-spacing: 1em;
 }
 
 /*************** add classpath repository **************/
 #addClasspathRepository {
-  -fx-alignment: center left;
+  -fx-alignment: center-left;
   -fx-spacing: 1em;
 }
 
